# Flash-Drive-UnCorruptor

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  release.yml  security.yml
assets/: com.fdu.tui.policy  fdu.desktop
crates/fdu-audit/: Cargo.toml
crates/fdu-audit/src/: config.rs  detector.rs  engine.rs  lib.rs  report.rs
crates/fdu-audit/src/detectors/: content_signatures.rs  deleted_forensics.rs  disk_layout.rs  fs_integrity.rs  mod.rs  usb_badusb.rs
crates/fdu-cli/: Cargo.toml
crates/fdu-cli/src/: main.rs
crates/fdu-cli/src/commands/: audit.rs  diagnose.rs  extract.rs  list.rs  mod.rs  partitions.rs  recover.rs  repair.rs  report.rs  scan.rs  usb.rs
crates/fdu-cli/tests/: cli_integration.rs
crates/fdu-core/: Cargo.toml
crates/fdu-core/src/: errors.rs  lib.rs  models.rs
crates/fdu-core/src/device/: linux.rs  mock.rs  mod.rs  traits.rs
crates/fdu-core/src/diagnostics/: bad_sectors.rs  entropy.rs  fake_flash.rs  mod.rs
crates/fdu-core/src/fs/: detect.rs  exfat.rs  ext4.rs  fat32.rs  mod.rs  ntfs.rs  traits.rs
crates/fdu-core/src/recovery/: carving.rs  mod.rs
crates/fdu-core/src/repair/: exfat.rs  fat32.rs  manifest.rs  mod.rs
crates/fdu-core/tests/: integration.rs
crates/fdu-device-enum/: Cargo.toml
crates/fdu-device-enum/src/: lib.rs  linux.rs
crates/fdu-disk/: Cargo.toml
crates/fdu-disk/src/: detectors.rs  gpt.rs  layout.rs  lib.rs  mbr.rs
crates/fdu-extract/: Cargo.toml
crates/fdu-extract/src/: hasher.rs  lib.rs  manifest.rs  quarantine.rs
crates/fdu-fuzz/: Cargo.toml
crates/fdu-fuzz/fuzz/: Cargo.toml
crates/fdu-fuzz/fuzz/fuzz_targets/: fuzz_carving.rs  fuzz_detect_fs.rs  fuzz_fat32_bpb.rs  fuzz_gpt.rs  fuzz_mbr.rs  fuzz_usb_descriptors.rs
crates/fdu-models/: Cargo.toml
crates/fdu-models/src/: audit.rs  extraction.rs  lib.rs  threat.rs  usb.rs
crates/fdu-tui/: Cargo.toml
crates/fdu-tui/src/: app.rs  event.rs  main.rs  ui.rs
crates/fdu-tui/src/views/: audit.rs  dashboard.rs  devices.rs  diagnose.rs  extract.rs  mod.rs  partitions.rs  recover.rs  repair.rs  scan.rs  usb.rs
crates/fdu-usb/: Cargo.toml
crates/fdu-usb/src/: detectors.rs  enumerate.rs  interrogate.rs  lib.rs  vid_pid_db.rs
crates/fdu-web/: Cargo.toml
crates/fdu-web/src/: main.rs
