[workspace]
members = [
    "crates/fdu-core",
    "crates/fdu-cli",
    "crates/fdu-web",
    "crates/fdu-device-enum",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Brandon Beierle <bbeierle21@gmail.com>"]
license = "MIT"
description = "Flash Drive UnCorruptor — First aid toolkit for flash drives"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Async
tokio = { version = "1", features = ["full"] }

# UUID
uuid = { version = "1.0", features = ["serde", "v4"] }
