[package]
name = "fdu-audit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Security audit engine and detector framework for FDU"

[dependencies]
fdu-core = { workspace = true }
fdu-models = { workspace = true }
fdu-usb = { workspace = true }
fdu-disk = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
