[package]
name = "fdu-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI interface for Flash Drive UnCorruptor"

[[bin]]
name = "fdu"
path = "src/main.rs"

[dependencies]
fdu-core = { path = "../fdu-core" }
fdu-device-enum = { path = "../fdu-device-enum" }

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
comfy-table = "7"
colored = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
