[package]
name = "fdu-disk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Partition table analysis (MBR/GPT) and disk threat detection for FDU"

[dependencies]
fdu-core = { workspace = true }
fdu-models = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
