[package]
name = "fdu-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared security and audit types for Flash Drive UnCorruptor"

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
