[package]
name = "fdu-usb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "USB descriptor interrogation and BadUSB detection for FDU"

[dependencies]
fdu-models = { workspace = true }
nusb = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
